# minirag

./: .gitignore  AGENTS.md  README.md  pyproject.toml
evaluation/: eval.py
minirag/: chat.py  cli.py
minirag/backends/: __init__.py  base.py  ollama_backend.py  openai_backend.py
minirag/models/: __init__.py  chat_session.py  chunk.py
minirag/services/: collection_service.py  document_service.py  rag_service.py
minirag/utils/: backend_manager.py  model_utils.py  stats_utils.py
tests/: test_chat.py  test_cli.py
tests/backends/: test_backends.py
tests/services/: test_collection_service.py  test_document_service.py  test_rag_service.py
tests/utils/: test_model_utils.py
